force-app/main/default/objects/Account/fields/Jataka_Epic2_20260720__c.field-meta.xml
<CustomField>
    <fullName>Jataka_Epic2_20260720__c</fullName>
    <description>Epic 2 bitemporal ingestion validation field.</description>
    <label>Jataka Epic 2 20260720</label>
    <length>80</length>
    <type>Text</type>
</CustomField>