force-app/main/default/objects/Account/fields/Jataka_Epic2_20260720B__c.field-meta.xml
<CustomField>
    <fullName>Jataka_Epic2_20260720B__c</fullName>
    <description>Epic 2 production webhook and transaction-time validation field.</description>
    <label>Jataka Epic 2 20260720 B</label>
    <length>80</length>
    <type>Text</type>
</CustomField>